# micro_ros_pico_dev

./: CMakeLists.txt  FreeRTOS_Kernel_import.cmake  PROJECT_STRUCTURE.md  README.md  REFACTORING_SUMMARY.md  built_packages  fixmath.h  package.xml  pico_dc_motor.c  pico_led_service.c  pico_micro_ros_example.c  pico_pwm.c  pico_servo.c  pico_servo.h  pico_servo_wifi.c  pico_subscriber.c  pico_uart_transport copy.c  pico_uart_transports copy.h  rcl_check_macros.h  test_servo.c
.github/: copilot-instructions.md  test_copilot-instructions.md
design_file/: 18650-battery-01a-v1.step  SG90 Servo Beffkipp v3.step  Switch_2.STEP  XL6009.stp  arduino touch sensor.STEP  bindbot_back.stl  laser_cutting_bind_bot.stl  switch.stp  외형도.docx
design_file/v1/: bindbot_front.stl
design_file/v2/: back.stl  front.stl  hand2.stl  left.stl  right.stl  whole.3mf
doc/: BUZZER_INTEGRATION.md  BUZZER_README.md  COPILOT_CHAT_SUMMARY.md  FINAL_STRUCTURE.md  FREERTOS_INTEGRATION.md  PROJECT_STRUCTURE.md  REFACTORING_SUMMARY.md  TOUCH_SENSOR_README.md  combine_micro_ros_site.py  fetch_micro_ros_site.py  test_README.md  translate_deepl.py  부품가격리스트.md
doc/document/: micro_ros_site_combined.md  micro_ros_site_docs.md  micro_ros_site_docs_ko.md  micro_ros_site_ko_browser.md  micro_ros_site_posts.md
example/: README.md  firm_pico_dc_motor.c  firm_pico_led_service.c  firm_pico_servo_wifi.c  u8g2_font_unifont_t_korean_NanumGothicCoding_16.h  u8g2pico_korean.c
example/firm/: CMakeLists.txt  firm_pico_pwm.c
example/ros_example/: CMakeLists.txt  pico_micro_ros_example.c  pico_micro_ros_example2.c
example/u8g2/: CMakeLists.txt
example/ws2812_pio/: CMakeLists.txt  example.c  ws2812.c  ws2812_demo.h
libmicroros/include/rmw_microxrcedds_c/: config.h
microros_static_library/library_generation/: Dockerfile  library_generation.sh
src/: app_state.h  main.c  micro_ros_test.c  rtos_micro_ros_test.c  rtos_test.c
src/board/: board.c  board.h  wifi_init.c
src/config/: lwipopts.h  project_config.h
src/config/freertos/: FreeRTOSConfig.h  rp2350_compat.h
src/drivers/: passive_buzzer_manager.c  passive_buzzer_manager.h  pico_servo.c  servo_ctrl.c  servo_ctrl.h  ssd1306_driver.c  ssd1306_driver.h  ssd1306_font.h  touch_sensor.c  touch_sensor.h  ws2812_driver.c  ws2812_driver.h
src/modes/: mode1.c  mode2.c  mode3.c  mode4.c  mode_common.h  mode_manager.c  mode_manager.h
src/tasks/: display_task.c  display_task.h  periph_task.c  periph_task.h  uros.c  uros.h
src/transport/: pico_uart_transport.c  pico_wifi_connect.c  pico_wifi_connect.h  pico_wifi_transport.c  pico_wifi_transport.h
src/uros/: uros_app.c  uros_app.h  uros_main.c  uros_main.h
test/: launcher.py  test_buzzer.py  test_display_bitmap.py  test_servo.py  test_touch.py  test_ws2812.py
